...
    <string name="app_name">Titan Companion</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Titan Companion</string>
    <string name="saved_games">Saved games: </string>
    <string name="create_new_adventure">Start New Adventure</string>
    <string name="load_adventure">Load Adventure</string>
    <string name="title_activity_gamebook_list">Gamebook List</string>
    <string name="viewSite">View Description</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="twofm">The Warlock of Firetop Mountain</string>
...
    <string name="stamina2">Stamina</string>
    <string name="skillAbr">Skill: </string>
    <string name="staminaAbr">Stamina: </string>
    <string name="luck">Luck: </string>
    <string name="name">Name:</string>
    <string name="saveAdventure">Save Adventure</string>
    <string name="rollStats">Reroll Statistics</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_load_adventure">Load Adventure</string>
    <string name="potionsProvisions">Potions &amp; Provisions</string>
    <string name="goldEquipment">Gold &amp; Equipment</string>
...
    <string name="skirmishForces">In Battle:</string>
    <string name="enemyForces2">Enemy Forces:</string>
    <string name="crew">Crew:</string>
    <string name="date">Date:</string>
    <string name="name2">Name:</string>
    <string name="result">Result</string>
    <string name="close">Close</string>
    <string name="storagePermissionsRequired">Storage permission is required to used this app!</string>
    <string name="gamebookNotImplemented">Sorry, this gamebook is not implemented yet!</string>
    <string name="success">Success!</string>
    <string name="failed">Failed…</string>
    <string name="noProvisionsLeft">You have no provisions left…</string>
    <string name="provisionsMaxStamina">You are already at maximum Stamina!</string>
...
    <string name="blockedAttack">You have blocked the enemy attack!</string>
    <string name="youWereHit">You\'ve been hit…</string>
    <string name="bothMissed">Both you and the enemy have missed</string>
    <string name="defeatedEnemy">You have defeated an enemy!</string>
    <string name="youveDied">You have died…</string>
    <string name="youMustFillSkillAndStamina">You must fill the skill and stamina values!</string>
    <string name="someParametersMIssing">Some adventure parameters are missing (</string>
    <string name="adventureName">Adventure Name</string>
    <string name="setValue">Set Value</string>
    <string name="setInitialStamina">Set initial Stamina</string>
    <string name="setInitialSkill">Set initial Skill</string>
    <string name="setInitialLuck">Set initial Luck</string>
    <string name="deleteEquipmentQuestion">Delete equipment?</string>
...
