<resources>

    <item name="alert_editText_field" type="id" />

</resources>